# whorl

./: README.md  pyproject.toml  server.py
.claude-plugin/: marketplace.json  plugin.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  api.ts  style.css
whorl/: agents.py  cli.py  models.py  server.py
whorl/frontend/: package-lock.json
whorl/frontend/src/: App.vue  api.ts
whorl/lib/: utils.py
